[tool.poetry]
name = "ralph"
version = "0.1.0"
description = "A cli tool to iterate on a developer design"
authors =  ["Ben Greene <BenJGreene@gmail.com>"]
readme = "README.md"
packages = [{include = "ralph"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
pydantic-settings = "^2.2"
langchain = "^1.2"
langgraph = "^1.0"
langchain-google-genai = "^4.2"
langchain-ollama = "^1.0"

grandalf = "^0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0"

[tool.poetry.scripts]
ralph = "ralph.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
